...
        <menu>
            <item
                android:id="@+id/nav_delete"
                android:icon="@drawable/baseline_delete_24"
                android:title="Izbriši račun"/>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/baseline_logout_24"
                android:title="Odjava"/>
        </menu>

    </item>

...
